Fixed the last of the spacing issues, I hope

--- a/aggressive-note/jquery.facebook.multifriend.select.css
+++ b/aggressive-note/jquery.facebook.multifriend.select.css
@@ -60,7 +60,7 @@ limitations under the License.
     overflow:scroll;
     overflow-x: hidden;
     -ms-overflow-x: hidden;
-    width:100%;
+    width:725px;
     height:400px;  
     font-family: 'lucida grande', tahoma, verdana, arial, sans-serif;
     color: #333;
@@ -79,16 +79,15 @@ limitations under the License.
     color:#3B5998;
     font-size:11px;
     font-weight:bold;
-    height:25px;
+    height:35px;
     padding:2px;
 }
 
 .jfmfs-friend.selected {
     background-color: #3B5998;
     border: 1px solid #3B5998;
-    
     background: #6D84B4; /* for non-css3 browsers */
-
+    
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#233E75', endColorstr='#6D84B4'); /* for IE */
     background: -webkit-gradient(linear, left top, left bottom, from(#233E75), to(#6D84B4)); /* for webkit browsers */
     background: -moz-linear-gradient(top,  #233E75,  #6D84B4); /* for firefox 3.6+ */    
